# Chest_tournament_app

./: .env  .gitignore  README.md  flake8_report.html  main.py  pyproject.toml  requirements.txt  run_application.ps1  run_flake8_report.ps1
_persistent/: players.json  tournaments.json
chest_tournament_pylot/controllers/: main_controller.py  menu_manager.py  player_manager.py  tournament_manager.py
chest_tournament_pylot/database_abstraction/helpers/: match_helper.py  player_helper.py  round_helper.py  tounament_helper.py
chest_tournament_pylot/database_abstraction/models/: database_helper.py  match.py  player.py  round.py  tournament.py
chest_tournament_pylot/views/: view.py
chest_tournament_pylot/views/ascii_arts/: add_player.txt  all_players.txt  all_tournament.txt  chest_pylot_title.txt  current_tournament.txt  error.txt  match_history.txt  matchs_results.txt  player_creation.txt  players_managment_title.txt  ranking.txt  start_tournament.txt  tournament_creation.txt  tournament_managment.txt  tournament_managment_title.txt
database_abstraction/helpers/: player_helper.py  tounament_helper.py
database_abstraction/models/: database_helper.py  match.py  player.py  round.py  tournament.py
flake8_report/: index.html
